--- a/dockerfile-compose/docker-compose.yml
+++ b/dockerfile-compose/docker-compose.yml
@@ -14,7 +14,8 @@ services:
 
   tomcat:
     build: .
+    image: my_tomcat
     ports:
       - "8080:8080"
-    container_name: web
+    container_name: my_tomcat
 
