--- a/docker-jenkins/docker-compose.yml
+++ b/docker-jenkins/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     - "8090:8080"
     - "50000:50000"
   container_name: my_jenkins
+  environment:
+    TZ: 'Asia/Shanghai'
   volumes:
     - "./jenkins_home:/var/jenkins_home"
     - "/var/run/docker.sock:/var/run/docker.sock"
