fixed nginx config

--- a/tools/nginx/config/default.conf
+++ b/tools/nginx/config/default.conf
@@ -1,15 +1,8 @@
 server {
     listen       80;
-    server_name  test1.ifking.com;
+    server_name  jenkins.me;
     location / {
-        proxy_pass http://宿主机ip:8090;
-    }
-}
-server {
-    listen       80;
-    server_name  test2.ifking.com;
-    location / {
-        proxy_pass http://宿主机ip:8080;
+        proxy_pass http://192.168.131.128:8090;
     }
 }
 
